--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/profile-card-component-main/images/favicon-32x32.png">
   <link rel="stylesheet" href="/styles.css">
   <title>Gabrielle's Profile card component</title>
 </head>
@@ -29,6 +29,11 @@
         <div class="o4"><h3>1.4K</h3> <span>Photos</span></div>
       </div>
     </div>
+  </div>
+  <br>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
